--- a/.github/worflows/ci.yml
+++ b/.github/worflows/ci.yml
@@ -17,6 +17,7 @@ jobs:
       run: npm install
 
     - name: Build and test
-      run: |
-        npm run start
-        npm run test
+      run: npm run start
+    
+    - name: Run test
+      run: npm run test
