--- a/.github/worflows/ci.yml
+++ b/.github/worflows/ci.yml
@@ -6,10 +6,6 @@ on:
       - main  # Aquí especifica la rama principal de tu repositorio
       - develop
 
-runs:
-  using: 'node20'
-  main: 'app.js'
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -20,6 +16,8 @@ jobs:
 
     - name: Install dependencies
       run: npm install
-    
-    - name: Run test
-      run: npm run test
+
+    - name: Build and test
+      run: |
+        npm run start
+        npm run test
