--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI
 on:
   push:
     branches:
-      - main  # Aquí especifica la rama principal de tu repositorio
+      - main
       - develop
 
 jobs:
@@ -18,6 +18,9 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+    
+    - name: Run lint
+      run: npm run lint
     
     - name: Run test
       run: npm run test
