--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "jest test"
+    "test": "jest test",
+    "lint": "eslint '**/**/*.js'"
   },
   "jest": {
     "testEnvironment": "jsdom"
@@ -18,6 +19,9 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.5.0",
+    "eslint": "^9.5.0",
+    "globals": "^15.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0"
   }
